anime_recommender.ipynb

--- a/Anime recommender/anime_recommender.ipynb
+++ b/Anime recommender/anime_recommender.ipynb
@@ -10,7 +10,8 @@
     "## Recomendador de Animes\n",
     "---\n",
     "\n",
-    "<img src=\"https://i.gifer.com/4ezV.gif\" width=\"750\" align=\"center\">\n",
+    "<img src=\"https://i.gifer.com/4ezV.gif\" width=\"750\" align=\"center\">
+\n",
     "\n",
     "\n",
     "\n",
